fixed button appearence on ios

--- a/docs/style.css
+++ b/docs/style.css
@@ -714,6 +714,7 @@ padding: 10px;
     border-radius: 8px;
     border: none;
     width: auto;
+    height: 100%;
 }
 
 
